increases z-index of mapbox user location dot to ensure it renders on top of sector layer

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,7 +7,12 @@ body {
   height: 100vh;
 }
 
-/* Override particular default mapbox styles */
+/* START - Override particular default mapbox styles */
 .mapboxgl-popup-close-button {
   padding: 2px 6px;
 }
+
+.mapboxgl-user-location {
+  z-index: 20;
+}
+/* END - Override particular default mapbox styles */
